data/derived/fa15/progs/unify/prog1177.ml.out
Characters 94-95:
  (hd::tl) -> ((a + b + hd )/10)::((a + b + hd )mod 10)::tl
                ^
Error: This expression has type 'a list
       but an expression was expected of type int
